fix(components/molecule/progressSteps): use a variable to set the overflow property value

--- a/components/molecule/progressSteps/src/styles/index.scss
+++ b/components/molecule/progressSteps/src/styles/index.scss
@@ -9,7 +9,7 @@ $base-class-stepper-bar: '#{$base-class-stepper-path}Connector';
   display: flex;
   flex-direction: column;
   gap: 8px;
-  overflow: hidden;
+  overflow: $o-progress-steps;
   #{$base-class-stepper} {
     max-width: $mw-progress-steps-path;
     #{$base-class-stepper-bar} {
